--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@material-ui/styles": "^4.5.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
