--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "create-react-app": "^3.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "node-fetch": "^2.6.0",
